# ziso_compressor

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  macos-amd64-toolchain.cmake  macos-arm64-toolchain.cmake  tc-win64.cmake
.github/workflow/: compile-release.yml
.github/workflows/: compile-release.yml
include/: banner.h  ziso.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  compile.sh  ziso.cpp  ziso.py
